--- a/public/business/assets/css/style.css
+++ b/public/business/assets/css/style.css
@@ -270,6 +270,9 @@ Banner Area
 .section-padding {
     padding: 150px 0px;
 }
+.section-padding1 {
+    padding: 60px 0px;
+}
 
 .section-padding-btn {
     padding-bottom: 150px;
