some update on for businness page

--- a/public/business/assets/css/style.css
+++ b/public/business/assets/css/style.css
@@ -273,7 +273,9 @@ Banner Area
 .section-padding1 {
     padding: 60px 0px;
 }
-
+.section-padding3 {
+    padding: 60px 0px;
+}
 .section-padding-btn {
     padding-bottom: 150px;
 }
